--- a/frontend/index.css
+++ b/frontend/index.css
@@ -2,6 +2,7 @@
 
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -106,6 +107,21 @@ div.section{
 }
 
 div.section p{
+    font-size: 1.25rem;
+}
+
+div.section2{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+    color: #fff;
+    border-bottom: 3px solid #000;
+    font-size: 4rem;
+}
+
+div.section2 p{
     font-size: 1.25rem;
 }
 
@@ -217,4 +233,189 @@ div#tech{
   bottom: 150px;
   opacity: 0;
   transition: ease-in-out 0.5s;
+}
+
+/* 製作者 */
+
+.maker-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 100px);
+    position: relative;
+}
+
+
+.maker-container{
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 400px;
+}
+
+.maker-container h1 {
+    font-size: 36px;
+    margin: 10px 0 5px 0;
+    line-height: 1.2;
+}
+
+.maker-container p{
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    margin: 10px 0;
+}
+
+.maker-container img{
+    width: 150px;
+    height: 150px;
+    border-radius: 20%;
+    flex-shrink: 0; 
+    margin-bottom: 15px;
+}
+
+.maker-container span{
+    font-size: 14px;
+}
+
+.maker-container button{
+    background-color: #512da8;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.maker-container button.hidden{
+    background-color: transparent;
+    border-color: #fff;
+}
+
+.maker-container div.profile{
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding: 20px;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.maker-container .form-container{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.maker-container .sign-in{
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+.maker-container.active .sign-in{
+    transform: translateX(100%);
+}
+
+.maker-container .sign-up{
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+
+.maker-container.active .sign-up{
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: move 0.6s;
+}
+
+@keyframes move{
+    0%, 49.99%{
+        opacity: 0;
+        z-index: 1;
+    }
+    50%, 100%{
+        opacity: 1;
+        z-index: 5;
+    }
+}
+
+.maker-container .toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 30px 0 0 30px;
+    z-index: 1000;
+}
+
+.maker-container.active .toggle-container{
+    transform: translateX(-100%);
+    border-radius: 0 30px 30px 0;
+}
+
+.maker-container .toggle{
+    background-color: #512da8;
+    height: 100%;
+    background: linear-gradient(to right, #5c6bc0, #512da8);
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.maker-container.active .toggle{
+    transform: translateX(50%);
+}
+
+.maker-container .toggle-panel{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.maker-container .toggle-left{
+    transform: translateX(-200%);
+}
+
+.maker-container.active .toggle-left{
+    transform: translateX(0);
+}
+
+.maker-container .toggle-right{
+    right: 0;
+    transform: translateX(0);
+}
+
+.maker-container.active .toggle-right{
+    transform: translateX(200%);
 }
