--- a/frontend/main.css
+++ b/frontend/main.css
@@ -2,14 +2,48 @@ button {
     font-size: 10px;
 }
 .set {
-    width: 50%;
-/* 
-    justify-content: center;
-    align-items: center; */
-    background-color: gold;
-    padding: 30px;
-    border-radius: 12px;
-    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: gold;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+    z-index: 1000;
+    padding: 20px;
+    padding-top: 0px;
+    max-height: 85vh;
+    overflow-y: auto;
+    box-sizing: border-box;
+    transform: translateY(calc(-100% + 35px));
+    transition: transform 0.4s ease
+}
+
+.set::-webkit-scrollbar {
+    width: 6px;
+}
+.set::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,0.2);
+    border-radius: 10px;
+}
+
+.set.open {
+    transform: translateY(0) !important;
+}
+
+#dragHandle {
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: wheat;
+    padding: 5px 20px;
+    border: 1px solid #ddd;
+    border-top: none;
+    border-radius: 0 0 15px 15px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    cursor: pointer;
+    font-size: 0.8rem;
 }
 
 .setThings {
@@ -25,7 +59,7 @@ button {
     width: 20%;
 }
 .result {
-    width: 30%;
+    padding-top: 10%;
 }
 
 .flex-container {
@@ -33,7 +67,9 @@ button {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
 }
 
 .flex-container>div {
@@ -58,3 +94,37 @@ button {
 .badge { padding: 4px 8px; border-radius: 4px; color: white; font-weight: bold; }
 .tra { background-color: #090980; }
 .hsr { background-color: #db5426; }
+
+/* #result-drawer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 80vh;
+    background: white;
+    box-shadow: 0 -5px 20px rgba(0,0,0,0.1);
+    border-radius: 20px 20px 0 0;
+    transition: transform 0.4s cubic-bezier(0.25, 1, 0.5, 1);
+    z-index: 1000;
+    
+    transform: translateY(calc(80vh - 60px));
+}
+
+#result-drawer.drawer-open {
+    transform: translateY(0);
+}
+
+#drawer-handle {
+    width: 40px;
+    height: 5px;
+    background: #ccc;
+    border-radius: 10px;
+    margin: 12px auto;
+    cursor: pointer;
+}
+
+.drawer-content {
+    padding: 0 20px 20px;
+    overflow-y: auto;
+    height: calc(100% - 40px);
+} */
