我也不知道加了甚麼

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -31,19 +31,13 @@ button {
     transform: translateY(0) !important;
 }
 
-#dragHandle {
+.back{
     position: absolute;
-    bottom: -35px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: wheat;
-    padding: 5px 20px;
-    border: 1px solid #ddd;
-    border-top: none;
-    border-radius: 0 0 15px 15px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    cursor: pointer;
-    font-size: 0.8rem;
+    bottom: 10px;
+    right: 10px;
+    width: 100px;
+    height: 100px;
+    z-index: 900;
 }
 
 .setThings {
